Fixes nodes filter dropdown clipping bug

--- a/src/assets/styles/_elements.scss
+++ b/src/assets/styles/_elements.scss
@@ -235,3 +235,7 @@
 .line-height-1 {
   line-height: 1;
 }
+
+.position-unset {
+  position: unset;
+}
